--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="Start">Start</string>
     <string name="Stop">Stop</string>
     <string name="Restart">Restart</string>
+    <string name="SaveConfig">SaveConfig</string>
 </resources>
